# simple-sandbox

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
demo/: demo.js
native/: addon.cc  cgroup.cc  cgroup.h  pipe.cc  pipe.h  sandbox.cc  sandbox.h  semaphore.cc  semaphore.h  utils.cc  utils.h
src/: index.ts  interfaces.ts  nativeAddon.ts  sandboxProcess.ts  tsconfig.json  utils.ts  waitThread.ts
tests/: test-first.js  test-native.js
